# teacher-comments

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  fly.toml  lychee.toml
.github/: dependabot.yml
.github/workflows/: doc-consistency.yml  link-check.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0001_initial_schema.py  20260510_0002_add_pii_lookup_hash.py  20260510_0003_drop_pii_pseudonym_unique.py
backend/app/: config.py  main.py
backend/app/adapters/: drive_client.py  google_oauth.py  openrouter_client.py
backend/app/adapters/document_extractors/: __init__.py  audio.py  docx.py  image.py  pdf.py  pptx.py  text.py  xlsx.py
backend/app/core/: exceptions.py  lifespan.py  session.py
backend/app/db/: session.py  write_queue.py
backend/app/models/: __init__.py  _helpers.py  batch_job.py  drive_file.py  llm_call_audit.py  pii_mapping.py  processed_artifact.py  semester_evaluation.py  system_event.py  teacher.py
backend/app/routers/: auth.py  batch.py  drive.py  evaluation.py  files.py  pii.py  settings.py  system.py
backend/app/schemas/: auth.py  batch.py  drive.py  evaluation.py  files.py  pii.py  settings.py
backend/app/services/: audit_logger.py  auth_service.py  batch_worker.py  drive_sync_service.py  encryption.py  evaluation_generator.py  llm_service.py  pii_anonymizer.py  processing_pipeline.py  settings_service.py  sse_publisher.py
backend/tests/: conftest.py
backend/tests/integration/: test_audio_pipeline.py  test_auth_flow.py  test_batch_worker.py  test_drive_sync.py  test_evaluation.py  test_files_router.py  test_health.py  test_llm_service.py  test_onboarding.py  test_pii_min_ui.py  test_processing_pipeline.py  test_settings.py  test_vision_pipeline.py
backend/tests/unit/: test_encryption.py  test_extractors.py  test_extractors_phase5b.py  test_pii_anonymizer.py  test_session.py  test_write_queue.py
docs/: ARCH-001-architecture.md  BDD-001-behavior-scenarios.md  DESIGN-001-detailed-design.md  PRD.md  TDD-001-testing-strategy.md  UIUX-001-design-system.md  work-plan.md
docs/adr/: ADR-001-system-foundation.md  DECISIONS.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/app/evaluation/new/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/pii/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/styles/: globals.css
mockups/: app.jsx  mock.jsx  screens-eval.jsx  screens-main.jsx  screens-onboarding.jsx  screens-system.jsx  styles.css  ui.jsx  墨痕 - 教師評語系統.html
scripts/: check_docs.py
